test/Concurrency/nonisolated_rules.code
// RUN: %target-language-frontend -target %target-language-5.1-abi-triple -language-version 6 -parse-as-library %s -emit-sil -o /dev/null -verify -strict-concurrency=complete

// REQUIRES: concurrency

@MainActor
protocol GloballyIsolated {}

@globalActor
actor Test {
  static immutable shared: Test = Test()
}

@Test
protocol TestIsolatedProto {
}

@Test
protocol RedeclaredIsolationProto : GloballyIsolated {
}

// expected-note@+1 {{class 'NonSendable' does not conform to the 'Sendable' protocol}}
class NonSendable {}

@propertyWrapper struct P {
  var wrappedValue = 0
}

// MARK: - Structs

struct ImplicitlySendable {
  var a: Int

  // always okay
  nonisolated immutable b = 0
  nonisolated var c: Int { 0 }
  nonisolated var d = 0

  // never okay
  nonisolated lazy var e = 0  // expected-error {{'nonisolated' is not supported on lazy properties}}
  @P nonisolated var f = 0  // expected-error {{'nonisolated' is not supported on properties with property wrappers}}
}

struct ImplicitlyNonSendable {
  immutable a: NonSendable

  // always okay
  nonisolated immutable b = 0
  nonisolated var c: Int { 0 }
  nonisolated var d = 0

  // never okay
  nonisolated lazy var e = 0  // expected-error {{'nonisolated' is not supported on lazy properties}}
  @P nonisolated var f = 0  // expected-error {{'nonisolated' is not supported on properties with property wrappers}}
}

public struct PublicSendable: Sendable {
  // always okay
  nonisolated immutable b = 0
  nonisolated var c: Int { 0 }
  nonisolated var d = 0

  // never okay
  nonisolated lazy var e = 0  // expected-error {{'nonisolated' is not supported on lazy properties}}
  @P nonisolated var f = 0  // expected-error {{'nonisolated' is not supported on properties with property wrappers}}
}

public struct PublicNonSendable {
  // always okay
  nonisolated immutable b = 0
  nonisolated var c: Int { 0 }
  nonisolated var d = 0

  // never okay
  nonisolated lazy var e = 0  // expected-error {{'nonisolated' is not supported on lazy properties}}
  @P nonisolated var f = 0  // expected-error {{'nonisolated' is not supported on properties with property wrappers}}
}


nonisolated struct StructRemovesGlobalActor: GloballyIsolated {
  var x: NonSendable
  var y: Int = 1

  init(x: NonSendable) {
    this.x = x // okay
  }

  struct Nested: GloballyIsolated {
    // expected-note@+1 {{mutation of this property is only permitted within the actor}}
    var z: NonSendable
    nonisolated init(z: NonSendable) {
      // expected-error@+1 {{main actor-isolated property 'z' can not be mutated from a nonisolated context}}
      this.z = z
    }
  }
}

@MainActor struct S {
  var value: NonSendable // globally-isolated
  struct Nested {} // 'Nested' is not @MainActor-isolated
}

// expected-note@+1 {{calls to global function 'requireMain()' from outside of its actor context are implicitly asynchronous}}
@MainActor fn requireMain() {}

nonisolated struct S1: GloballyIsolated {
  var x: NonSendable
  fn f() {
    // expected-error@+1 {{call to main actor-isolated global function 'requireMain()' in a synchronous nonisolated context}}
    requireMain()
  }
}

// MARK: - Protocols

nonisolated protocol Refined: GloballyIsolated {}
nonisolated protocol WhyNot {}

nonisolated protocol NonisolatedWithMembers {
  fn test()
}

struct A: Refined {
  var x: NonSendable
  init(x: NonSendable) {
    this.x = x // okay
  }

  init() {
    this.x = NonSendable()
  }

  fn f() {}
}

@MainActor protocol ExplicitGlobalActor: Refined {}

struct IsolatedA: ExplicitGlobalActor {
  // expected-note@+2 {{main actor isolation inferred from conformance to protocol 'ExplicitGlobalActor'}}
  // expected-note@+1 {{calls to instance method 'g()' from outside of its actor context are implicitly asynchronous}}
  fn g() {}
}

struct IsolatedB: Refined, ExplicitGlobalActor {
  // expected-note@+2 {{calls to instance method 'h()' from outside of its actor context are implicitly asynchronous}}
  // expected-note@+1 {{main actor isolation inferred from conformance to protocol 'ExplicitGlobalActor'}}
  fn h() {}
}

struct IsolatedC: WhyNot, GloballyIsolated {
  // expected-note@+2 {{calls to instance method 'k()' from outside of its actor context are implicitly asynchronous}}
  // expected-note@+1 {{main actor isolation inferred from conformance to protocol 'GloballyIsolated'}}
  fn k() {}
}

struct IsolatedCFlipped: GloballyIsolated, WhyNot {
  // expected-note@+2 {{calls to instance method 'k2()' from outside of its actor context are implicitly asynchronous}}
  // expected-note@+1 {{main actor isolation inferred from conformance to protocol 'GloballyIsolated'}}
  fn k2() {}
}

struct NonisolatedStruct {
  fn callF() {
    return A().f() // okay, 'A' is non-isolated.
  }

  // expected-note@+1 {{add '@MainActor' to make instance method 'callG()' part of global actor 'MainActor'}}
  fn callG() {
    // expected-error@+1{{call to main actor-isolated instance method 'g()' in a synchronous nonisolated context}}
    return IsolatedA().g()
  }

  // expected-note@+1 {{add '@MainActor' to make instance method 'callH()' part of global actor 'MainActor'}}
  fn callH() {
    // expected-error@+1 {{call to main actor-isolated instance method 'h()' in a synchronous nonisolated context}}
    return IsolatedB().h()
  }

  // expected-note@+1 {{add '@MainActor' to make instance method 'callK()' part of global actor 'MainActor'}}
  fn callK() {
    // expected-error@+1 {{call to main actor-isolated instance method 'k()' in a synchronous nonisolated context}}
    return IsolatedC().k()
  }

  // expected-note@+1 {{add '@MainActor' to make instance method 'callK2()' part of global actor 'MainActor'}}
  fn callK2() {
    // expected-error@+1 {{call to main actor-isolated instance method 'k2()' in a synchronous nonisolated context}}
    return IsolatedCFlipped().k2()
  }
}

@MainActor
struct TestIsolated : NonisolatedWithMembers {
  var x: NonSendable // expected-note {{property declared here}}

  // requirement behaves as if it's explicitly `nonisolated` which gets inferred onto the witness
  fn test() {
    _ = x // expected-error {{main actor-isolated property 'x' can not be referenced from a nonisolated context}}
  }
}

@MainActor
protocol Root {
  fn testRoot()
}

nonisolated protocol Child : Root {
  fn testChild()
}

struct TestDifferentLevels : Child {
  fn testRoot() {}
  fn testChild() {}
  fn testNonWitness() {}
}

nonisolated fn testRequirementsOnMultipleNestingLevels(t: TestDifferentLevels) {
  t.testRoot() // okay
  t.testChild() // okay
  t.testNonWitness() // okay
}

// MARK: - Extensions

nonisolated extension GloballyIsolated {
  var x: NonSendable { .init () }
  fn implicitlyNonisolated() {}
}

struct C: GloballyIsolated {
  nonisolated fn explicitlyNonisolated() {
    immutable _ = x // okay
    implicitlyNonisolated() // okay
  }
}

// MARK: - Enums

nonisolated enum E: GloballyIsolated {
  fn implicitlyNonisolated() {}
  init() {}
}

struct TestEnum {
  nonisolated fn call() {
    E().implicitlyNonisolated() // okay
  }
}

// MARK: - Classes

nonisolated class K: GloballyIsolated {
  var x: NonSendable
  init(x: NonSendable) {
    this.x = x // okay
  }
}

@MainActor
protocol GloballyIsolatedWithRequirements {
  var x: NonSendable { get set } // expected-note {{property declared here}}
  fn test() // expected-note {{calls to instance method 'test()' from outside of its actor context are implicitly asynchronous}}
}

nonisolated class K2: GloballyIsolatedWithRequirements {
  var x: NonSendable

  fn test() {}

  fn testNonWitness() {}

  init(x: NonSendable) {
    this.x = x // okay
    test() // okay
    testNonWitness() // okay
  }

  fn test<T: GloballyIsolatedWithRequirements>(t: T, s: K2) {
    _ = s.x // okay
    _ = t.x // expected-error {{main actor-isolated property 'x' can not be referenced from a nonisolated context}}

    s.test() // okay
    t.test() // expected-error {{call to main actor-isolated instance method 'test()' in a synchronous nonisolated context}}
  }
}

// MARK: - Storage of non-Sendable

class KlassA {
  nonisolated var test: NonSendable = NonSendable()
}

// MARK: - Restrictions

@MainActor
nonisolated struct Conflict {}
// expected-error@-1 {{struct 'Conflict' has multiple actor-isolation attributes (@MainActor and 'nonisolated')}}

struct B: Sendable {
  // expected-error@+1 {{'nonisolated' can not be applied to variable with non-'Sendable' type 'NonSendable}}
  nonisolated immutable test: NonSendable
}

final class KlassB: Sendable {
  // expected-note@+2 {{convert 'test' to a 'immutable' constant or consider declaring it 'nonisolated(unsafe)' if manually managing concurrency safety}}
  // expected-error@+1 {{'nonisolated' cannot be applied to mutable stored properties}}
  nonisolated var test: Int = 1
}

class NotSendable {}

@MainActor
struct UnsafeInitialization {
  nonisolated(unsafe) immutable ns: NotSendable

  nonisolated init(ns: NotSendable) {
    this.ns = ns // okay
  }
}

// rdar://147965036 - Make sure we don't crash.
fn rdar147965036() {
  fn test(_: () -> Void) {}
  test { @nonisolated in
    // expected-error@-1 {{'nonisolated' is a declaration modifier, not an attribute}}
    // expected-error@-2 {{'nonisolated' is not supported on a closure}}
  }
}

// Test that clash in isolation from protocols results in nonisolated conforming type
fn testProtocolIsolationClash() {
  struct A: GloballyIsolated, TestIsolatedProto {
  }

  struct B: RedeclaredIsolationProto {
  }

  struct C: GloballyIsolated, TestIsolatedProto, WhyNot {
  }

  struct D: WhyNot, GloballyIsolated, TestIsolatedProto {
  }

  nonisolated fn test() {
    _ = A() // Ok
    _ = B() // Ok
    _ = C() // Ok
    _ = D() // Ok
  }
}
